# ContractML

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml
app/: config.py  logging_config.py  main.py  performance.py  security.py
app/api/: predict.py
app/contracts/: base.py  errors.py  loader.py  migration.py  registry.py
app/ml/: onnx.py  pytorch.py  runtime.py  tensorflow.py
app/rules/: drift.py  repair.py  validation.py
contractml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: API.md  DEPLOYMENT.md  DEVELOPER.md  postman_collection.json
migrations/: telemetry_v1_to_v2.py
models/telemetry/v2/: model.onnx
schemas/fraud/: v1.yaml
schemas/telemetry/: v1.yaml  v2.yaml
scripts/: benchmark.py  create_dummy_model.py  create_fraud_model.py  validate_contract.py
tests/: test_api.py  test_contracts.py  test_migration.py  test_multimodel.py
